syntax = "proto3";

service Contract {
	rpc Deploy(DeployRequest) returns(DeployResponse) {};
    rpc Query(QueryRequest) returns(QueryResponse) {};
}

message DeployRequest {}

message DeployResponse {}

message QueryRequest {
    string contract = 1;
}

message QueryResponse {}